@@ -1,5 +1,5 @@
 use strict;
-use warnings FATAL => 'all';
+use warnings;
 
 use Test::More;
 use Test::Warnings 0.009 ':no_end_test', ':all';
