@@ -4,6 +4,8 @@ Revision history for {{$dist->name}}
           - no longer scans inc/ for configure_requires minimum perl version
           - generated CONTRIBUTING file now mentions the existence of a TODO
             file in the repository (which is never packaged)
+          - dropped the use of "use warnings FATAL => 'all';' in this
+            distribution's tests, and in newly-minted distributions
 
 0.085     2015-01-16 01:45:19Z
           - fix test failure with metadata mismatch created by [Run::*] 0.031
